app/assets/stylesheets/games.css.scss
// Place all the styles related to the games controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

body {
  padding: 0;
}

.title {
  font-size: 1.5em;
}

.fail,
.cur {
  padding: 2px 5px;
  border-radius: 3px;
}

.fail {
  border: 1px solid red !important;
  color:red;
}

.cur {
  border: 1px solid green;
  color:green;
}

.big-text {
  font-size:1.4em;
}

.centered {
  text-align: center;
}

.center-num {
  font-size:8em;
  text-align:center;
}

.bigger-text {
  font-size:1.5em;
}

.roundEdge {
  border-radius: 6px;
}

.img-background {
  width:100%;
  height: 350px;
  border-radius: 6px;
  border: 10px solid black;
  position: relative;
  overflow:hidden;
}

@-webkit-keyframes clouds {
  0% {margin-left: -150px;}
  100% {margin-left: -700px;}
}

@keyframes clouds {
  0% {margin-left:0px;}
  100% {margin-left:500px;}
}

@keyframes planeDown {
  0% {}
  100% {margin-top:280px;}
}

@-webkit-keyframes planeDown {
  0% {}
  100% {margin-top:280px}
}

@-webkit-keyframes planeUp {
  0% {}
  100% {margin-top: -50px}
}

@-keyframes planeUp {
  0% {}
  100% {margin-top: -20px}
}

.planeDown {
  -webkit-animation: planeDown 4s linear;
  animation: planeDown 4s linear;
}

.planeUp {
  -webkit-animation: planeUp 0.5s linear;
  animation: planeUp 0.5s linear;
}

#plane {
  position:absolute; 
  z-index:100;
  width: 40%; 
  top:50px; 
  left:50px;
}

.sky {
  height:155%; 
  margin-top: -30%; 
  margin-left:-5%; 
  z-index:0;
}

.landscape {
  -webkit-animation: clouds 4s linear infinite;
  animation: clouds 4s linear infinite;
}

.tall-input {
  height: 40px;
}

.div-relative {
  position: relative;
}

.border-black {
  border: 10px solid black;
}

.space-top-4 {
  margin-top: 40px;
}

.space-top-2 {
  margin-top: 20px;
}

.space-top-1 {
  margin-top: 10px;
}

.space-right-2 {
  margin-right:20px;
}

